# cuda_stereo_matcher

./: .gitignore  README.md  README_cuda_setup.md  algorithm.py  demo.py  evaluate.py  requirements-cuda.txt
cuda/: ALL_BUILD.vcxproj  ALL_BUILD.vcxproj.filters  CMakeCache.txt  CMakeLists.txt  README.md  ZERO_CHECK.vcxproj  ZERO_CHECK.vcxproj.filters  cmake_install.cmake  stereo_cuda_kernels.sln  stereo_cuda_kernels.vcxproj  stereo_cuda_kernels.vcxproj.filters  vecadd_shared.vcxproj  vecadd_shared.vcxproj.filters  vector_add_test.vcxproj  vector_add_test.vcxproj.filters
cuda/Release/: vecadd_shared.exp  vecadd_shared.lib
cuda/include/: dummy_kernel.h  vecadd.h
cuda/kernels/: dummy_kernel.cu  vecadd_lib.cu  vector_add_test.cu
cuda/vecadd_shared.dir/Release/: vecadd_lib.cu-1326145837.deps  vecadd_lib.cu.cache  vecadd_shared.dll.recipe
cuda/vecadd_shared.dir/Release/vecadd_shared.tlog/: CudaCompile.read.1u.tlog  CudaCompile.write.1u.tlog  CustomBuild.command.1.tlog  CustomBuild.read.1.tlog  CustomBuild.write.1.tlog  link.command.1.tlog  link.read.1.tlog  link.write.1.tlog  vecadd_shared.write.1u.tlog
cuda/x64/Release/ZERO_CHECK/: ZERO_CHECK.recipe
cuda/x64/Release/ZERO_CHECK/ZERO_CHECK.tlog/: CustomBuild.command.1.tlog  CustomBuild.read.1.tlog  CustomBuild.write.1.tlog  ZERO_CHECK.lastbuildstate
